[package]
name = "going-to-the-cinema"
version = "0.1.0"
authors = ["Michael Salaverry <michael_salaverry@intuit.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# https://www.codewars.com/kata/562f91ff6a8b77dfe900006e/train/rust 

[dependencies]
