[package]
name = "sudoku_validator"
version = "0.1.0"
authors = ["Michael Salaverry <michael_salaverry@intuit.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sudoku_validator"
path = "src/lib.rs"

[[bin]]
name = "sudoku_validator_bin"
path = "src/main.rs"

[dependencies]


[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "sudoku_validator"
harness = false